--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=https://t.me/deluxeofbot?start=start" />
-    <title>Redirecionando...</title>
+<head>
+  <meta charset="UTF-8">
+  <title>Redirecionando...</title>
 
-    <!-- Pixel do Beacons -->
-    <script src="https://cdn.beacons.ai/pixel/2189359868146902.js" async></script>
-  </head>
-  <body>
-  </body>
+  <!-- Pixel do Facebook -->
+  <script>
+    !function(f,b,e,v,n,t,s){
+      if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src='https://connect.facebook.net/en_US/fbevents.js';
+      s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)
+    }(window, document, 'script');
+
+    fbq('init', '2189359868146902'); // Substituir pelo seu Pixel ID
+    fbq('track', 'clicktobot');
+  </script>
+
+  <noscript>
+    <img height="1" width="1" style="display:none"
+         src="https://www.facebook.com/tr?id=2189359868146902&ev=clicktobot&noscript=1"/>
+  </noscript>
+
+  <!-- Redirecionamento após 800ms -->
+  <script>
+    setTimeout(function () {
+      window.location.href = "https://t.me/deluxeofbot?start=start";
+    }, 800);
+  </script>
+</head>
+<body>
+  <p>Redirecionando você para o conteúdo...</p>
+</body>
 </html>
