--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>Redirecionando...</title>
 
   <!-- Pixel do Facebook -->
   <script>
@@ -35,4 +30,4 @@
 <body>
   <p>Redirecionando você para o conteúdo...</p>
 </body>
-</html>
+</html
