--- a/index.html
+++ b/index.html
@@ -1,33 +1,38 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Redirecionando...</title>
+  <!-- Meta para redirecionamento responsivo -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Pixel do Facebook -->
   <script>
-    !function(f,b,e,v,n,t,s){
-      if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-      n.queue=[];t=b.createElement(e);t.async=!0;
-      t.src='https://connect.facebook.net/en_US/fbevents.js';
-      s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)
-    }(window, document, 'script');
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src='https://connect.facebook.net/en_US/fbevents.js';
+    s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script');
 
-    fbq('init', '2189359868146902'); // Substituir pelo seu Pixel ID
-    fbq('track', 'clicktobot');
+    fbq('init', '2189359868146902'); // ID do seu Pixel
+    fbq('track', 'Lead'); // Evento de Lead
   </script>
-
   <noscript>
-    <img height="1" width="1" style="display:none"
-         src="https://www.facebook.com/tr?id=2189359868146902&ev=clicktobot&noscript=1"/>
+    <img height="1" width="1" style="display:none" 
+         src="https://www.facebook.com/tr?id=2189359868146902&ev=Lead&noscript=1"/>
   </noscript>
 
-  <!-- Redirecionamento após 800ms -->
+  <!-- Script de redirecionamento após 800ms -->
   <script>
-    setTimeout(function () {
+    setTimeout(function() {
       window.location.href = "https://t.me/deluxeofbot?start=start";
     }, 800);
   </script>
 </head>
 <body>
-  <p>Redirecionando você para o conteúdo...</p>
+  <p>Redirecionando você para o Telegram...</p>
 </body>
-</html
+</html>
