--- a/index.html
+++ b/index.html
@@ -2,37 +2,14 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Redirecionando...</title>
-  <!-- Meta para redirecionamento responsivo -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Pixel do Facebook -->
-  <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src='https://connect.facebook.net/en_US/fbevents.js';
-    s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script');
-
-    fbq('init', '2189359868146902'); // ID do seu Pixel
-    fbq('track', 'Lead'); // Evento de Lead
-  </script>
-  <noscript>
-    <img height="1" width="1" style="display:none" 
-         src="https://www.facebook.com/tr?id=2189359868146902&ev=Lead&noscript=1"/>
-  </noscript>
-
-  <!-- Script de redirecionamento após 800ms -->
-  <script>
-    setTimeout(function() {
-      window.location.href = "https://t.me/deluxeofbot?start=start";
-    }, 800);
-  </script>
+  <title>Entrando...</title>
+  <meta name="robots" content="noindex, nofollow">
+  <meta http-equiv="refresh" content="0; url=https://t.me/+zp2FGQWB5jxhMmIx">
 </head>
 <body>
-  <p>Redirecionando você para o Telegram...</p>
+  <p>Redirecionando...</p>
+  <script>
+    window.location.href = "https://t.me/+zp2FGQWB5jxhMmIx";
+  </script>
 </body>
 </html>
